--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3",
+    "swiper": "6.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
